kyverno-policies/validating-policy.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: urlshortener-validating-policy
spec:
  validationFailureAction: enforce
  rules:
    - name: select-deployments
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - urlshortener
      
      validate:
        message: "You must have label app: mongodb or app: url-shortener when creating deployments in urlshortener namespace"
        pattern:
          mateadata:
            labels:
              app: mongodb | url-shortener
